<resources>
    <string name="app_name">QueRico</string>
    <string name="rico_img_desc">Rico logo img</string>
    <string name="password_reset_header">Password Reset</string>
    <string name="reset_code_hint">Enter the code sent</string>
    <string name="create_post_header">Create New Post</string>
    <string name="restaurant_name_hint">Restaurant Name</string>
    <string name="location_hint">Location</string>
    <string name="content_hint">Enter Content Here</string>
    <string name="login_header">Login</string>
    <string name="register_header">Register</string>
    <string name="email_hint">Email</string>
    <string name="fullname_hint">Full Name</string>
    <string name="password_hint">password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="remember_me">Remember me\n</string>
    <string name="password_forgot">Forgot password?</string>
    <string name="dont_have_account">Don’t have an account yet? Register here</string>
    <string name="login_with">Or Login with</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button_desc">login</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="back_to_login">Back to Login</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="default_web_client_id">1077075055533-if4gi424abq0pcdnf4clkabth4fbkekc.apps.googleusercontent.com</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancle</string>"
    <string name="password_info" translatable="false" />
    <string name="show_password">show_password</string>
    <string name="name_hint">Name</string>
    <string name="change_photo">change</string>
    <string name="edit_profile_header">Edit Profile</string>
    <string name="edit_post_header">Edit Post</string>
    <string name="map_tap_marker_info" />
    <string name="my_uploads_header" />
    <string name="no_posts_yet" >No post yet</string>
    <string name="delete">delete</string>
    <string name="restaurant_image" />
    <string name="edit">edit</string>
    <string name="app_version" />
    <string name="my_posts">My Posts</string>
    <string name="logout">logout</string>
    <string name="edit_profile" >edit</string>
    <string name="profile_header" />
    <string name="main_label_nav_upload_post" />
    <string name="main_label_nav_profile" />
    <string name="main_label_my_posts" />
    <string name="main_label_map_fragment" />
    <string name="settings" />
    <string name="saved_posts">Saved Posts</string>
    <string name="google_logo">Google logo</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="back">Back</string>
    <string name="view_more">View More</string>
    <string name="edit_photo">edit_photo</string>
    <string name="show_confirm_password_description">show_confirm_password_description</string>


</resources>