<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/upload_a_post_fragment"
        android:icon="@drawable/ic_add_post"
        android:enabled="true"
        android:title="@string/main_label_nav_upload_post" />

    <item android:id="@+id/profile_fragment"
        android:icon="@drawable/ic_name"
        android:enabled="true"
        android:title="@string/main_label_nav_profile" />

    <item android:id="@+id/my_post_fragment"
        android:icon="@drawable/ic_my_post"
        android:enabled="true"
        android:title="@string/main_label_my_posts" />

    <item android:id="@+id/map_fragment"
        android:icon="@drawable/ic_map"
        android:enabled="true"
        android:title="@string/main_label_map_fragment" />

</menu>