<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/RicoTheme"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Fragments.EditPostFragment"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:gravity="center"
        android:text="@string/edit_post_header"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/edit_post_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:contentDescription="@string/edit_photo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_add_image"
        android:background="@drawable/ic_placeholder_image"
        android:padding="2dp" />

    <RatingBar
        android:id="@+id/edit_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:stepSize="0.5"
        android:isIndicator="false"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp" />

    <!-- Restaurant Name Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_post_restaurant_name_input_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/restaurant_name_hint"
        app:boxBackgroundColor="#F5F5F5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_post_restaurant_name_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="#F5F5F5" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Location Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_post_location_input_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/location_hint"
        app:boxBackgroundColor="#F5F5F5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_post_location_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="#F5F5F5" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Content Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_post_content_input_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/content_hint"
        app:boxBackgroundColor="#F5F5F5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:background="#F5F5F5"
            android:minLines="3"
            android:maxLines="5"
            android:gravity="top|start" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_post_changes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#F5F5F5"
        android:text="@string/save_changes"
        android:textColor="@color/black"
        android:textStyle="bold" />
</LinearLayout>