<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/RicoTheme"
    tools:context=".LoginFragment">


    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_light"
        android:text="@string/login_header"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <ImageView
        android:id="@+id/login_rico_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/rico_img_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rico_img" />


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_header"
        app:layout_constraintVertical_bias="0.69">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Email Input Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_input_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Input Field -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_hint_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password_hint"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_input_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/login_remember_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/remember_me" />

                <TextView
                    android:id="@+id/login_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="1dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="4dp"
                    android:text="@string/password_forgot"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
            <!-- Login Button -->
            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/RicoTheme"
                android:text="@string/login_header"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/dont_have_account"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/login_or_login_with"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_with"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Google Login Button -->
                <Button
                    android:id="@+id/login_google_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/RicoTheme"
                    android:isScrollContainer="false"
                    android:text="Google"
                    android:textColor="@color/black"
                    app:icon="@drawable/ic_google"
                    app:iconTintMode="multiply" />
                <!-- Facebook Login Button -->
                <Button
                    android:id="@+id/login_facebook_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/RicoTheme"
                    android:elevation="4dp"
                    android:text="Facebook"
                    android:textColor="@color/black"
                    app:icon="@drawable/ic_facebook"
                    app:iconTintMode="multiply" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout >
